# qi-runtime

./: Cargo.toml  build.rs
src/: environment.rs  executor.rs  lib.rs  runtime_worker.rs  strings.rs  tool_control.rs
src/async_runtime/: coro.rs  executor.rs  future.rs  mod.rs  pool.rs  queue.rs  scheduler.rs  state.rs  state_machine.rs  state_machine_poc.rs  task.rs
src/async_runtime/c_runtime/: syscalls.c
src/async_runtime/ffi/: mod.rs  syscalls.rs
src/debug/: commands.rs  mod.rs  profiler.rs  stack_trace.rs  variable_inspector.rs
src/error/: chinese.rs  handler.rs  mod.rs
src/io/: file.rs  filesystem.rs  h2_ffi.rs  http.rs  http_ffi.rs  interface.rs  io_ffi.rs  mod.rs  network_ffi.rs  stdio.rs  tls_ffi.rs  websocket_ffi.rs
src/memory/: allocator.rs  gc.rs  interface.rs  manager.rs  mod.rs
src/stdlib/: bytes_ffi.rs  cli_ffi.rs  closure_ffi.rs  compress_ffi.rs  config_ffi.rs  conversion.rs  crypto.rs  crypto_ffi.rs  database_ffi.rs  datetime.rs  debug.rs  env_ffi.rs  exception_ffi.rs  gui_ffi.rs  hashmap.rs  json_ffi.rs  lexical_ffi.rs  list.rs  llm.rs  llm_ffi.rs  math.rs  math_ffi.rs  mcp.rs  mcp_client_ffi.rs  mcp_ffi.rs  mod.rs  multipart_ffi.rs  os_ffi.rs  path_ffi.rs  plugin_ffi.rs  process_ffi.rs  profiler.rs  qi_str.rs  qi_str_ffi.rs  random_ffi.rs  rc_obj.rs  reflect_ffi.rs  regex_ffi.rs  signal_ffi.rs  string.rs  (+9 more)
src/strings/: interface.rs
