# 独立 workspace（暂不并入父 workspace）—— 便于单独构建 + zig 交叉构建验证
[workspace]

[package]
name = "qi-runtime"
version = "0.1.0"
edition = "2021"
authors = ["Qi Language Team"]
license = "MIT"
description = "Qi 语言运行时 —— 编进生成程序的 FFI 符号（IO/网络/LLM/DB/异步…）。无 LLVM，纯 Rust+C，可 zig 交叉编译。"

[lib]
name = "qi_runtime"
crate-type = ["staticlib", "rlib"]

[features]
# 桌面 GUI：把 qi-gui（tao/egui/winit/softbuffer 等）编进 libqi_runtime.a，
# 并置 has_gui。默认关闭 —— 保持运行时轻量、可 zig 交叉编译（GUI 非交叉目标）。
# 桌面构建 GUI 可用的运行时：cargo build --release --features gui
gui = ["dep:qi-gui"]

[build-dependencies]
cc = "1.0"

[dependencies]
# 桌面 GUI 静态库（可选）：tao 老 API + egui 控件层。仅 --features gui 时编入。
qi-gui = { path = "../qi-gui", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
# preserve_order：JSON 对象保持插入序（parse→stringify 往返不打乱原文档键序，
# 输出跨运行确定）。底层 IndexMap。
serde_json = { version = "1.0.107", features = ["preserve_order"] }
# MCP 工具/资源/提示注册表按注册序迭代；serde feature 顺带给 configparser 的
# IndexMap 提供 Serialize/Deserialize（feature 统一）
indexmap = { version = "2", features = ["serde"] }

# HTTP/TLS —— 纯 Rust（rustls），无系统 openssl/Security.framework
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "charset", "http2"] }
rustls = { version = "0.23", features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
h2 = "0.4"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
bytes = "1"
http = "1"

glob = "0.3.1"
walkdir = "2.4.0"
dirs = "5.0.1"

thiserror = "1.0.69"
anyhow = "1.0.86"
once_cell = "1.21.3"
lazy_static = "1.5"

tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
crossbeam = "0.8.4"
dashmap = "6.1"
libc = "0.2.158"
num_cpus = "1.16.0"
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.0"

sha2 = "0.10.8"
sha1 = "0.10.6"
md-5 = "0.10.6"
base64 = "0.22.0"
hmac = "0.12.1"
rand = "0.8"

clap = { version = "4.5.50", features = ["derive"] }
toml = "0.8.8"
ini = "1.3"
# indexmap feature：INI 段/键保持文件出现序 —— 读回 JSON 键序确定且忠实原文档
configparser = { version = "3.1", features = ["indexmap"] }
flate2 = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4.20"

[dev-dependencies]
# filesystem.rs 测试用（预先存在的缺口：tests 引用了 tempfile 但未声明）
tempfile = "3"
